[package]
name = "bfgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"